[project]
name = "PyMart"
version = "0.0.2"
description = "Python based API wrapper around Ensembl's BioMart"
readme = "README.md"
authors = [
    {name = "Ivan Pokrovac", email = "ivan.pokrovac.fbf@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"
dependencies = [
    "pandas >= 1.4.1",
    "requests >= 2.27.1",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/ivanp1994/PyMart.git"

[project.optional-dependencies]
extra = [
    "flake8==3.9.2",
    "pytest==6.2.5",
    "twine==4.0.2",
    "wheel==0.38.4",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.7.2",
]
